--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root{
+    --green: #1ABC9C;
+    --dark-blue: #2C3E50;
+    --blue: #3A546D;
+}
 a{
     color: currentColor;
     text-decoration: none;
@@ -12,13 +17,48 @@ img{
     max-width: 100%;
     display: block;
 }
+/* header  */
+.header{
+    background-color: var(--dark-blue);
+    color: white;
+}
+
 /* HERO  */
+.hero,
+.about-section{
+    color: white;
+    background-color: var(--green);
+}
 .hero-img{
     width: 300px;
     aspect-ratio: 1;
     margin: 0 auto;
 }
+/* elemento stella  */
 
+.star-element::before{
+    content: '';
+    display: block;
+    height: 3px;
+    width: 140px;
+    background-color: currentColor;
+}
+.star-element::after{
+    content: '';
+    display: block;
+    height: 3px;
+    width: 140px;
+    background-color: currentColor;
+}
+/* footer  */
+.footer-main{
+    background-color: var(--blue);
+    color: white;
+}
+.footer-copywrite{
+    background-color: var(--dark-blue);
+    color: white;
+}
 /* Debug */
 .debug .container-md {
     padding: 20px;
