--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ img{
     background-color: var(--dark-blue);
     color: white;
 }
+.hambuger{
+    font-size: 22px;
+    border: 1px solid rgba(255, 255, 255,0.6);
+    padding: 5px;
+   
+}
 
 /* HERO  */
 .hero,
@@ -33,6 +39,11 @@ img{
     width: 300px;
     aspect-ratio: 1;
     margin: 0 auto;
+}
+.tags .tag:not(:last-child)::after {
+    content: '-';
+    display: inline-block;
+    margin-left: 1rem;
 }
 /* elemento stella  */
 
