--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,10 @@ img{
     color: white;
     background-color: var(--green);
     
-} 
+}
+::placeholder{
+    color: #333333;
+}
 /* footer  */
 .footer-main{
     background-color: var(--blue);
